@@ -6,6 +6,7 @@ import org.bukkit.command.PluginCommand;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.plugin.java.JavaPlugin;
 
+import java.util.Collections;
 import java.util.List;
 
 public abstract class BaseCommand<P extends JavaPlugin> implements TabExecutor {
@@ -36,6 +37,6 @@ public abstract class BaseCommand<P extends JavaPlugin> implements TabExecutor {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
-        return List.of();
+        return Collections.emptyList();
     }
 }
